fix footer padding issue on mobile view

--- a/css/layout/chatbot-page/_chat-area.scss
+++ b/css/layout/chatbot-page/_chat-area.scss
@@ -130,7 +130,10 @@
         align-items: center;
         background-color: var(--card-bg);
         width: 100%;
-        padding: .75rem 1rem 2rem 1rem;
+        padding: .75rem 1rem .75rem 1rem;
+        @media (width >= 800px) {
+            padding-bottom: 2rem;
+        }
         overflow: visible;
 
         @media (width >=800px) {
