--- a/css/styles.css
+++ b/css/styles.css
@@ -1503,8 +1503,13 @@ nav .nav-footer p:focus {
   align-items: center;
   background-color: var(--card-bg);
   width: 100%;
-  padding: 0.75rem 1rem 2rem 1rem;
+  padding: 0.75rem 1rem 0.75rem 1rem;
   overflow: visible;
+}
+@media (width >= 800px) {
+  .chatbot-content .chat-area footer {
+    padding-bottom: 2rem;
+  }
 }
 @media (width >= 800px) {
   .chatbot-content .chat-area footer {
